--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ h1 {
 }
 h2 {
   font-family: "Josefin Slab", serif;
+  padding: 10px;
 }
 h3 {
   text-align: center;
@@ -14,6 +15,10 @@ p {
   text-align: center;
   font-family: "Josefin Slab", serif;
   font-size: 28px;
+}
+ul {
+  list-style: none;
+  text-align: center;
 }
 .logo {
   max-width: 180px;
