--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,13 @@ p {
 ul {
   list-style: none;
   text-align: center;
+  font-size: 22px;
+}
+.page-link {
+  font-family: "Josefin Slab", cursive;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 10px;
 }
 .logo {
   max-width: 180px;
@@ -27,4 +34,14 @@ ul {
 }
 .pastry-pic {
   max-width: 300px;
+}
+.croissant {
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+}
+.gold-medal {
+  display: block;
+  margin: 0 auto;
+  padding: 20px;
 }
