--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+body {
+  background: linear-gradient(to right, rgb(224, 222, 222) 40%, white);
+}
 h1 {
   text-align: center;
   font-family: "Sail", cursive;
@@ -25,15 +28,17 @@ ul {
   font-family: "Josefin Slab", cursive;
   font-size: 20px;
   font-weight: 600;
-  padding: 10px;
+  border-radius: 15px;
 }
 .logo {
   max-width: 180px;
   display: block;
   margin: 0 auto;
+  border-radius: 50%;
 }
 .pastry-pic {
   max-width: 300px;
+  padding-bottom: 20px;
 }
 .croissant {
   display: block;
