Changed font on contact page

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ ul {
   list-style: none;
   text-align: center;
   font-size: 22px;
+  font-family: "Josefin Slab", serif;
 }
 .page-link {
   font-family: "Josefin Slab", cursive;
