--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,9 @@ h1 {
   font-size: 54px;
 }
 h2 {
-  font-family: "Josefin Slab", serif;
-  padding: 10px;
+  text-decoration: underline 0.5px;
 }
+h2,
 h3 {
   text-align: center;
   font-family: "Josefin Slab", serif;
